Included word-break to prevent overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@ html, body {
     background-color: #ddd;
     text-align: center;
     height: 100%;
+    word-break: break-word;
 }
 
 .box {
